gccida/g2/update_life_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1093:41: error: must use 'enum' tag to refer to type 'update_life_extent'
void  update_life_info( sbitmap blocks, update_life_extent extent, int prop_flags) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1180:11: error: expected identifier or '('
__int64 *(short *)0xnum_; // [rsp+10h] [rbp-F8h] 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1180:11: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1180:10: note: to match this '('
__int64 *(short *)0xnum_; // [rsp+10h] [rbp-F8h] 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1181:29: error: expected identifier or '('
 struct basic_block_def ***(short *)0xnum_a; // [rsp+10h] [rbp-F8h] 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1181:29: error: expected ')'
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1181:28: note: to match this '('
 struct basic_block_def ***(short *)0xnum_a; // [rsp+10h] [rbp-F8h] 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1201:15: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
timevar_push( TV_LIFE_0); 
              ^~~~~~~~~
              TV_LIFE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1204:44: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
if ( ( prop_flags & 2) == 0 || ( timevar = TV_LIFE_0, ( insns = get_insns( )) == 0LL) ) 
                                           ^~~~~~~~~
                                           TV_LIFE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1206:11: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
timevar = TV_LIFE_0; 
          ^~~~~~~~~
          TV_LIFE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1212:11: error: use of undeclared identifier 'TV_LIFE_0'; did you mean 'TV_LIFE'?
timevar = TV_LIFE_0; 
          ^~~~~~~~~
          TV_LIFE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:47:13: note: 'TV_LIFE' declared here
DEFTIMEVAR (TV_LIFE                  , "life analysis")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1233:15: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar_push( TV_LIFE_UPDATE_0); 
              ^~~~~~~~~~~~~~~~
              TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1239:11: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar = TV_LIFE_UPDATE_0; 
          ^~~~~~~~~~~~~~~~
          TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1298:11: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar = TV_LIFE_UPDATE_0; 
          ^~~~~~~~~~~~~~~~
          TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1303:11: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar = TV_LIFE_UPDATE_0; 
          ^~~~~~~~~~~~~~~~
          TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1307:11: error: use of undeclared identifier 'TV_LIFE_UPDATE_0'; did you mean 'TV_LIFE_UPDATE'?
timevar = TV_LIFE_UPDATE_0; 
          ^~~~~~~~~~~~~~~~
          TV_LIFE_UPDATE
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/timevar.def:48:13: note: 'TV_LIFE_UPDATE' declared here
DEFTIMEVAR (TV_LIFE_UPDATE           , "life info update")
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1408:12: error: invalid suffix 'xnum_a' on integer constant
*(short *)0xnum_a = ptra; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1474:18: error: invalid suffix 'xnum_a' on integer constant
v48 = *(short *)0xnum_a; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1496:12: error: invalid suffix 'xnum_a' on integer constant
*(short *)0xnum_a = v48; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1516:24: error: invalid suffix 'xnum_a' on integer constant
if ( v25 == *(short *)0xnum_a ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/flow.c:1723:18: error: invalid suffix 'xnum_' on integer constant
for ( *(short *)0xnum_ = 0LL; *(short *)0xnum_ != size_; ++*(short *)0xnum_ ) 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_life_info/src/obj/flow.o] Error 1
